# pyhathiprep

./: .travis.yml  Jenkinsfile  MANIFEST.in  README.rst  cx_setup.py  deployment.yml  documentation.url  make.bat  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements-freeze.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/workflows/: tox_matrix.yml
CI/docker/pytest_tests/: Dockerfile
CI/docker/python/linux/: Dockerfile
CI/docker/python/share/: requirements-ci.txt
CI/docker/python/windows/: Dockerfile
ci/docker/python/linux/jenkins/: Dockerfile
ci/docker/python/linux/tox/: Dockerfile  apt-packages.txt
ci/docker/python/share/: install_choco.ps1   requirements-ci.txt
ci/docker/python/windows/jenkins/: Dockerfile
ci/docker/python/windows/tox/: Dockerfile
ci/jenkins/scripts/: devpi.groovy  packaging.groovy  sonarqube.groovy  tox.groovy
docs/source/: about.rst  conf.py  dependencies.rst  index.rst  installMSI.rst  installSourceCLI.rst  installation.rst  modules.rst  pyhathiprep.rst  usageCLI.rst
pyhathiprep/: __init__.py  __main__.py  __version__.py  checksum.py  cli.py  configure_logging.py  hathiyml.py  package_creater.py  utils.py
requirements/: requirements-ci-freeze.txt  requirements-ci.txt  requirements-dev-freeze.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
src/pyhathiprep/: __init__.py  checksum.py
tests/: test_basic.py  test_checksum.py  test_cli.py  test_main.py  test_package_creator.py  test_pyhathiprep_utils.py  test_yaml.py
vars/: runJenkinsPipeline.groovy
