[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhathiprep"
version = "0.1.10.dev0"
requires-python = ">=3.8"
dependencies = [
    "ruamel.yaml",
    "pytz",
    "tzlocal<5.0",
    'typing-extensions;python_version<"3.10"'
]
readme = "README.rst"
license = {text = "University of Illinois/NCSA Open Source License"}
authors = [
    {name = "University Library at The University of Illinois at Urbana Champaign: Preservation Services", email = "prescons@library.illinois.edu"},
]
maintainers = [
    {name = "Henry Borchers", email = "hborcher@illinois.edu"}
]
description = "Replacement for HathiPrep script"

[project.urls]
Documentation = "https://www.library.illinois.edu/dccdocs/pyhathiprep"
Download = "https://github.com/UIUCLibrary/pyhathiprep"

[tool.setuptools]
packages = [
    "pyhathiprep",
]
zip-safe = true

[tool.setuptools.package-data]
pyhathiprep = ["py.typed"]

[project.scripts]
pyhathiprep = "pyhathiprep.__main__:main"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

