[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhathiprep"
version = "0.1.10.dev0"
requires-python = ">=3.10"
dependencies = [
    "ruamel.yaml",
    "pytz",
    "tzlocal<5.0",
    'typing-extensions;python_version<"3.10"'
]
readme = "README.rst"
license = "NCSA"
authors = [
    {name = "University Library at The University of Illinois at Urbana Champaign: Preservation Services", email = "prescons@library.illinois.edu"},
]
maintainers = [
    {name = "Henry Borchers", email = "hborcher@illinois.edu"}
]
description = "Replacement for HathiPrep script"

[project.urls]
Documentation = "https://www.library.illinois.edu/dccdocs/pyhathiprep"
Download = "https://github.com/UIUCLibrary/pyhathiprep"

[dependency-groups]
test = ['coverage', 'pytest']
type_checking = ["mypy", "lxml", "types-tzlocal<5.0", 'typing-extensions;python_version<"3.10"']
docs = ["sphinx"]
lint = [
    "flake8",
    "bandit",
    "pydocstyle",
    "pylint",
    {include-group = "type_checking"},
]
tox = ["tox"]
release = ["twine"]
dev = [
    {include-group = "lint"},
    {include-group = "docs"},
    {include-group = "test"},
]
ci = [
    "pysonar",
    {include-group = "release"},
    {include-group = "dev"},
]
[tool.setuptools]
packages = [
    "pyhathiprep",
]
package-dir = {"pyhathiprep" = "src/pyhathiprep"}
zip-safe = true

[tool.setuptools.package-data]
pyhathiprep = ["py.typed"]

[project.scripts]
pyhathiprep = "pyhathiprep.__main__:main"

[tool.mypy]
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

