[metadata]
name = pyhathiprep
version = 0.1.5.dev5
url = http://www.library.illinois.edu/dccdocs/pyhathiprep
download_url = https://github.com/UIUCLibrary/pyhathiprep
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Replacement for HathiPrep script
long_description = file: README.rst
license = University of Illinois/NCSA Open Source License
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu

[aliases]
test=pytest

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[mypy]
ignore_missing_imports = True